# AoC2024-rusting

./: Cargo.toml  README.md
src/: helper.rs  lib.rs
