[package]
name = "aoc2024_rs"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day1_1"
path = "src/bin/day1/1.rs"
test = false
bench = false

[[bin]]
name = "day1_2"
path = "src/bin/day1/2.rs"
test = false
bench = false

[[bin]]
name = "day2_1"
path = "src/bin/day2/1.rs"
test = false
bench = false

[[bin]]
name = "day2_2"
path = "src/bin/day2/2.rs"
test = false
bench = false

[[bin]]
name = "day3_1"
path = "src/bin/day3/1.rs"
test = false
bench = false

[[bin]]
name = "day3_2"
path = "src/bin/day3/2.rs"
test = false
bench = false

[[bin]]
name = "day4_1"
path = "src/bin/day4/1.rs"
test = false
bench = false

[[bin]]
name = "day4_2"
path = "src/bin/day4/2.rs"
test = false
bench = false

[[bin]]
name = "day5_1"
path = "src/bin/day5/1.rs"
test = false
bench = false

[[bin]]
name = "day5_2"
path = "src/bin/day5/2.rs"
test = false
bench = false

[[bin]]
name = "day6_1"
path = "src/bin/day6/1.rs"
test = false
bench = false

[[bin]]
name = "day6_2"
path = "src/bin/day6/2.rs"
test = false
bench = false

[[bin]]
name = "day7"
path = "src/bin/day7/day7.rs"
test = false
bench = false

[[bin]]
name = "day8"
path = "src/bin/day8/day8.rs"
test = false
bench = false
